--- a/capstone.html
+++ b/capstone.html
@@ -78,7 +78,35 @@
            
         </div>
     </div>
-    <div class=""></div>
+    <div class="para">
+    <div class="para-in">
+        <h2>I am a creative professional with a passion for design and technology. 
+            My work spans various disciplines, including web design, graphic design, and app development.</h2>
+    </div>
+    </div>
+    <div class="foot">
+        <div><h3>What I Do</h3></div>
+        <div class="foot-in">
+        <div> <ul>
+            <li>Web Design</li>
+            <li>App Development</li>
+            <li>Illustration</li>
+            <li>UI/UX Design</li>
+            <li>Animation</li>
+        </ul> </div>
+        <div> <ul> 
+            <li>Graphic Design</li>
+            <li>Photography</li>
+            <li>Branding</li>
+            <li>Motion Graphics</li>
+        </ul> </div>
+    </div>
+    </div>
+    <div class="footer">
+        <div ><h1>Get In Touch</h1> 
+        <p>intersted in working together? Let's create something amazing.</p>
+        </div> 
+    </div>
 </main>
 
 </body>
